--- a/app/src/main/res/layout/activity_genre_list.xml
+++ b/app/src/main/res/layout/activity_genre_list.xml
@@ -84,6 +84,19 @@
                 app:layout_constraintVertical_bias="0" />
 
 
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                app:layout_constraintVertical_bias="0.5"
+                app:layout_constraintHorizontal_bias="0.1"
+                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
+                app:layout_constraintBottom_toBottomOf="@+id/startText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/startText"
+                app:layout_constraintTop_toTopOf="@+id/startText">
+
+            </ImageView>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
